// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pie 1`] = `
{
  "annotation": {},
  "chartType": "pie",
  "config": {
    "pie": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
        "negativeColor": "#EB3373",
        "positiveColor": "#7E5DFF",
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": false,
        "labelLayout": "arc",
        "labelOverlap": true,
        "labelStroke": "#fff",
        "showDimension": true,
        "showValue": true,
        "showValuePercent": true,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "frameCornerRadius": 0,
        "headerBackgroundColor": "transparent",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        "outlineBorderLineWidth": 0,
        "titleFontColor": "#21252c",
        "titleFontSize": 12,
        "titleFontWeight": "bold",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "pie": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
          "negativeColor": "#EB3373",
          "positiveColor": "#7E5DFF",
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelLayout": "arc",
          "labelOverlap": true,
          "labelStroke": "#fff",
          "showDimension": true,
          "showValue": true,
          "showValuePercent": true,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "frameCornerRadius": 0,
          "headerBackgroundColor": "transparent",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
          "outlineBorderLineWidth": 0,
          "titleFontColor": "#21252c",
          "titleFontSize": 12,
          "titleFontWeight": "bold",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "2019-销售额-sales",
      "__Dim_Color__": "2019-销售额",
      "__Dim_Detail__": "2019-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 200,
      "__OriginalData__": {
        "count": 500,
        "date": "2019",
        "profit": 100,
        "sales": 200,
      },
      "count": 500,
      "date": "2019",
      "sales": 200,
    },
    {
      "__Dim_ColorId__": "2019-利润-profit",
      "__Dim_Color__": "2019-利润",
      "__Dim_Detail__": "2019-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "count": 500,
        "date": "2019",
        "profit": 100,
        "sales": 200,
      },
      "count": 500,
      "date": "2019",
      "profit": 100,
    },
    {
      "__Dim_ColorId__": "2020-销售额-sales",
      "__Dim_Color__": "2020-销售额",
      "__Dim_Detail__": "2020-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "count": 50,
        "date": "2020",
        "profit": 310,
        "sales": 60,
      },
      "count": 50,
      "date": "2020",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "2020-利润-profit",
      "__Dim_Color__": "2020-利润",
      "__Dim_Detail__": "2020-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 310,
      "__OriginalData__": {
        "count": 50,
        "date": "2020",
        "profit": 310,
        "sales": 60,
      },
      "count": 50,
      "date": "2020",
      "profit": 310,
    },
    {
      "__Dim_ColorId__": "2021-销售额-sales",
      "__Dim_Color__": "2021-销售额",
      "__Dim_Detail__": "2021-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "count": 50,
        "date": "2021",
        "profit": 30,
        "sales": 60,
      },
      "count": 50,
      "date": "2021",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "2021-利润-profit",
      "__Dim_Color__": "2021-利润",
      "__Dim_Detail__": "2021-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "count": 50,
        "date": "2021",
        "profit": 30,
        "sales": 60,
      },
      "count": 50,
      "date": "2021",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "2022-销售额-sales",
      "__Dim_Color__": "2022-销售额",
      "__Dim_Detail__": "2022-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "count": 50,
        "date": "2022",
        "profit": 50,
        "sales": 100,
      },
      "count": 50,
      "date": "2022",
      "sales": 100,
    },
    {
      "__Dim_ColorId__": "2022-利润-profit",
      "__Dim_Color__": "2022-利润",
      "__Dim_Detail__": "2022-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "count": 50,
        "date": "2022",
        "profit": 50,
        "sales": 100,
      },
      "count": 50,
      "date": "2022",
      "profit": 50,
    },
    {
      "__Dim_ColorId__": "2023-销售额-sales",
      "__Dim_Color__": "2023-销售额",
      "__Dim_Detail__": "2023-销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "count": 50,
        "date": "2023",
        "profit": 40,
        "sales": 80,
      },
      "count": 50,
      "date": "2023",
      "sales": 80,
    },
    {
      "__Dim_ColorId__": "2023-利润-profit",
      "__Dim_Color__": "2023-利润",
      "__Dim_Detail__": "2023-利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "count": 50,
        "date": "2023",
        "profit": 40,
        "sales": 80,
      },
      "count": 50,
      "date": "2023",
      "profit": 40,
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "利润",
          "sales": "销售额",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 10,
          "max": 310,
          "min": 30,
          "sum": 1030,
        },
      },
      "id": "pie",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-利润-profit": "2019-利润",
          "2019-销售额-sales": "2019-销售额",
          "2020-利润-profit": "2020-利润",
          "2020-销售额-sales": "2020-销售额",
          "2021-利润-profit": "2021-利润",
          "2021-销售额-sales": "2021-销售额",
          "2022-利润-profit": "2022-利润",
          "2022-销售额-sales": "2022-销售额",
          "2023-利润-profit": "2023-利润",
          "2023-销售额-sales": "2023-销售额",
        },
        "colorItems": [
          "2019-销售额-sales",
          "2019-利润-profit",
          "2020-销售额-sales",
          "2020-利润-profit",
          "2021-销售额-sales",
          "2021-利润-profit",
          "2022-销售额-sales",
          "2022-利润-profit",
          "2023-销售额-sales",
          "2023-利润-profit",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "日期",
      "id": "date",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "angle": [
      "sales",
      "profit",
    ],
    "color": [
      "date",
      "__MeaName__",
    ],
    "column": [],
    "detail": [
      "date",
      "__MeaName__",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "date",
      "count",
    ],
  },
  "locale": "zh-CN",
  "measures": [
    {
      "alias": "销售额",
      "id": "sales",
    },
    {
      "alias": "利润",
      "id": "profit",
    },
  ],
}
`;

exports[`pie 2`] = `
{
  "animation": true,
  "background": "transparent",
  "categoryField": "__Dim_ColorId__",
  "color": {
    "domain": [
      "2019-销售额-sales",
      "2019-利润-profit",
      "2020-销售额-sales",
      "2020-利润-profit",
      "2021-销售额-sales",
      "2021-利润-profit",
      "2022-销售额-sales",
      "2022-利润-profit",
      "2023-销售额-sales",
      "2023-利润-profit",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "pie",
    "values": [
      {
        "__Dim_ColorId__": "2019-销售额-sales",
        "__Dim_Color__": "2019-销售额",
        "__Dim_Detail__": "2019-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 200,
        "__OriginalData__": {
          "count": 500,
          "date": "2019",
          "profit": 100,
          "sales": 200,
        },
        "count": 500,
        "date": "2019",
        "sales": 200,
      },
      {
        "__Dim_ColorId__": "2019-利润-profit",
        "__Dim_Color__": "2019-利润",
        "__Dim_Detail__": "2019-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "count": 500,
          "date": "2019",
          "profit": 100,
          "sales": 200,
        },
        "count": 500,
        "date": "2019",
        "profit": 100,
      },
      {
        "__Dim_ColorId__": "2020-销售额-sales",
        "__Dim_Color__": "2020-销售额",
        "__Dim_Detail__": "2020-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "count": 50,
          "date": "2020",
          "profit": 310,
          "sales": 60,
        },
        "count": 50,
        "date": "2020",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "2020-利润-profit",
        "__Dim_Color__": "2020-利润",
        "__Dim_Detail__": "2020-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 310,
        "__OriginalData__": {
          "count": 50,
          "date": "2020",
          "profit": 310,
          "sales": 60,
        },
        "count": 50,
        "date": "2020",
        "profit": 310,
      },
      {
        "__Dim_ColorId__": "2021-销售额-sales",
        "__Dim_Color__": "2021-销售额",
        "__Dim_Detail__": "2021-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "count": 50,
          "date": "2021",
          "profit": 30,
          "sales": 60,
        },
        "count": 50,
        "date": "2021",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "2021-利润-profit",
        "__Dim_Color__": "2021-利润",
        "__Dim_Detail__": "2021-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "count": 50,
          "date": "2021",
          "profit": 30,
          "sales": 60,
        },
        "count": 50,
        "date": "2021",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "2022-销售额-sales",
        "__Dim_Color__": "2022-销售额",
        "__Dim_Detail__": "2022-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "count": 50,
          "date": "2022",
          "profit": 50,
          "sales": 100,
        },
        "count": 50,
        "date": "2022",
        "sales": 100,
      },
      {
        "__Dim_ColorId__": "2022-利润-profit",
        "__Dim_Color__": "2022-利润",
        "__Dim_Detail__": "2022-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "count": 50,
          "date": "2022",
          "profit": 50,
          "sales": 100,
        },
        "count": 50,
        "date": "2022",
        "profit": 50,
      },
      {
        "__Dim_ColorId__": "2023-销售额-sales",
        "__Dim_Color__": "2023-销售额",
        "__Dim_Detail__": "2023-销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "count": 50,
          "date": "2023",
          "profit": 40,
          "sales": 80,
        },
        "count": 50,
        "date": "2023",
        "sales": 80,
      },
      {
        "__Dim_ColorId__": "2023-利润-profit",
        "__Dim_Color__": "2023-利润",
        "__Dim_Detail__": "2023-利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "count": 50,
          "date": "2023",
          "profit": 40,
          "sales": 80,
        },
        "count": 50,
        "date": "2023",
        "profit": 40,
      },
    ],
  },
  "innerRadius": 0,
  "label": {
    "dataFilter": [Function],
    "formatMethod": [Function],
    "layout": {
      "align": "arc",
    },
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": false,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "stroke": "#fff",
    },
    "visible": true,
  },
  "large": false,
  "largeThreshold": Infinity,
  "legends": {
    "autoPage": true,
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
          "unSelectedHover": {
            "fill": null,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "state": {
          "unSelected": {
            "fill": "#646A73",
            "fillOpacity": 0.8,
          },
        },
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "state": {
          "unSelected": {
            "fillOpacity": 1,
            "opacity": 0.2,
          },
        },
        "style": [Function],
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "outerRadius": 0.8,
  "padding": 0,
  "pie": {
    "state": {
      "hover": {
        "outerRadius": 0.8800000000000001,
      },
    },
    "style": {
      "lineWidth": 1,
      "stroke": "transparent",
    },
  },
  "progressiveStep": 400,
  "progressiveThreshold": Infinity,
  "region": [
    {
      "clip": true,
    },
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": "销售额",
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": "数量",
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "type": "pie",
  "valueField": "__MeaValue__",
}
`;

exports[`pie 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "2019-利润-profit": "2019-利润",
    "2019-销售额-sales": "2019-销售额",
    "2020-利润-profit": "2020-利润",
    "2020-销售额-sales": "2020-销售额",
    "2021-利润-profit": "2021-利润",
    "2021-销售额-sales": "2021-销售额",
    "2022-利润-profit": "2022-利润",
    "2022-销售额-sales": "2022-销售额",
    "2023-利润-profit": "2023-利润",
    "2023-销售额-sales": "2023-销售额",
  },
  "colorItems": [
    {
      "alias": "2019-销售额",
      "id": "2019-销售额-sales",
    },
    {
      "alias": "2019-利润",
      "id": "2019-利润-profit",
    },
    {
      "alias": "2020-销售额",
      "id": "2020-销售额-sales",
    },
    {
      "alias": "2020-利润",
      "id": "2020-利润-profit",
    },
    {
      "alias": "2021-销售额",
      "id": "2021-销售额-sales",
    },
    {
      "alias": "2021-利润",
      "id": "2021-利润-profit",
    },
    {
      "alias": "2022-销售额",
      "id": "2022-销售额-sales",
    },
    {
      "alias": "2022-利润",
      "id": "2022-利润-profit",
    },
    {
      "alias": "2023-销售额",
      "id": "2023-销售额-sales",
    },
    {
      "alias": "2023-利润",
      "id": "2023-利润-profit",
    },
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
